--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
-main{
+main {
     width: 95%;
     margin: auto;
 }
+
 .contenedor {
     margin: auto;
 }
@@ -9,24 +10,28 @@ main{
 .row {
     display: grid;
     grid-template-columns: repeat(8, 1fr);
-    gap: 10px; /* Ajusta el espacio entre las tarjetas */
+    gap: 10px;
+    /* Ajusta el espacio entre las tarjetas */
 }
+
 /* Media queries para hacer responsivo */
 @media (max-width: 1366px) {
-    main{
+    main {
         width: 100%;
         margin: 0rem;
     }
+
     .row {
         grid-template-columns: repeat(4, 1fr);
     }
 }
 
 @media (max-width: 720px) {
-    main{
+    main {
         width: 100%;
         margin: 0;
     }
+
     .row {
         grid-template-columns: repeat(2, 1fr);
     }
@@ -51,7 +56,8 @@ main{
     justify-content: center;
     align-items: center;
     overflow: hidden;
-    width: 100%; /* La imagen ocupa el 100% del contenedor */
+    width: 100%;
+    /* La imagen ocupa el 100% del contenedor */
     margin: auto;
 }
 
@@ -67,21 +73,13 @@ main{
     align-items: center;
 }
 
-/* .custom-button {
-    padding: 0.5rem 2rem;
-    background-color: rgb(75, 85, 99);
-    color: #ffffff;
-    border: none;
-    border-radius: 0.25rem;
-    font-weight: bold;
-    margin-top: 1rem;
-    cursor: pointer;
-    transition: background-color 0.3s ease-in-out;
-} */
+
 .custom-button {
     text-align: center;
-    background-color: #4b5563; /* Color gris equivalente en Tailwind */
-    color: #ffffff; /* Color blanco en Tailwind */
+    background-color: #4b5563;
+    /* Color gris equivalente en Tailwind */
+    color: #ffffff;
+    /* Color blanco en Tailwind */
     padding-top: 0.25rem;
     padding-bottom: 0.25rem;
     padding-left: 1.5rem;
@@ -91,12 +89,14 @@ main{
     transition-property: all;
     transition-duration: 0.2s;
     transition-timing-function: ease-out;
-    width: 9rem;
+    width: 100%;
     border: none;
     font-size: smaller;
     text-decoration: none;
     margin-top: .25rem;
     margin-bottom: .25rem;
+    display: flex;
+    justify-content: center;
 }
 
 .custom-button:hover {
@@ -104,7 +104,8 @@ main{
 }
 
 .custom-button:focus {
-    transform: scale(0.95); /* Escala del elemento al enfocar en Tailwind */
+    transform: scale(0.95);
+    /* Escala del elemento al enfocar en Tailwind */
 }
 
 
@@ -112,34 +113,53 @@ a {
     text-decoration: none;
 }
 
-
-
-
 #modalOverlay {
     display: none;
     background: rgba(0, 0, 0, 0.3);
-  }
-  
-  .modal-body {
+}
+
+.modal-body {
     background-color: #fff;
     border-radius: 15px;
     padding: 20px;
-    width: 50%;
+    width: 90%;
     display: flex;
     flex-direction: column;
-  }
-.modal-content{
-    width: 75%;
+    align-content: center;
     align-items: center;
 }
 
-li{
-    text-decoration: none;
-} 
-.borde{
-    border: 1px solid red;
+.modal-content {
+    width: 95%;
+    align-items: center;
 }
-.footer{
+
+.modal-footer {
+    background-color: #fff;
+    border-radius: 15px;
+    padding: 20px;
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+li {
+    text-decoration: none;
+}
+
+.borde {
+    border: 1px solid #dc3545;
+}
+
+.footer {
     text-align: center;
     margin-top: 5rem;
+}
+
+.rojo {
+    background-color: #dc3545;
+}
+.w-95{
+    width: 95%;
 }
